# import-embargo

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
import_embargo/: __main__.py  core.py
tests/: core_test.py
tests/test_structure/module_a/: __embargo__.json  __init__.py  service.py
tests/test_structure/module_a/submodule_a/: service.py
tests/test_structure/module_b/: __embargo__.json  service.py
tests/test_structure/module_c/: hello.py
tests/test_structure/module_d/: service.py  service_with_bad_import.py
tests/test_structure/module_e/: __embargo__.json  private_service.py
tests/test_structure/module_f/: __embargo__.json  private_service.py  public_service.py
tests/test_structure/module_f/private_submodule_f/: __init__.py  utils.py
tests/test_structure/module_f/private_submodule_f_2/: __init__.py  utils.py
